@@ -143,7 +143,7 @@ $lang['admin']['lctitle_active'] = "Indicates whether the content item is active
 $lang['admin']['lctitle_default'] = "Specify the content item that is accessed when the root url is requested.  Only one item can be default";
 $lang['admin']['lctitle_move'] = 'Allows arranging your content hierarchy';
 $lang['admin']['lctitle_multiselect'] = 'Select all visible items / Select none';
-$lang['admin']['invalid_url'] = 'The page URL specified is invalid.  It should contain only alphanumeric characters, or - or /.  It is also possible that the URL specified is already in use.';
+$lang['admin']['invalid_url2'] = 'The page URL specified is invalid.  It should contain only alphanumeric characters, or - or /.  Extensions must contain only alphanumeric chars and be less than 5 characters in length.  It is also possible that the URL specified is already in use.';
 $lang['admin']['page_url'] = 'Page URL';
 $lang['admin']['runuserplugin'] = 'Run User Plugin';
 $lang['admin']['output'] = 'Output';
