@@ -3,6 +3,7 @@ Version 1.11 *** NO NAME ***
   - CMSModule class is now abstract
   - Remove the $config['output_compression'] option.
   - Remove the $config['use_adodb_lite'] option and the USE_OLD_ADODB global.
+  - Page URLS can now have small (5 chars or less) ASCII extensions.
 
 Version 1.10.1 - Le Lorrain
 -----------------------------
